disabled-apps/containerssh/containerssh-guests/containerssh-guests-headlessservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: containerssh-guests-headless
spec:
  clusterIP: None
  selector:
    app: containerssh-guests
  ports:
    - name: http
      port: 80
