disabled-apps/containerssh/containerssh-guests/containerssh-guests-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: containerssh-guests
spec:
  routes:
    - match: Host(`containerssh.ieeetamu.org`)
      kind: Rule
      services:
        - name: containerssh-guests
          port: 80
      middlewares: # apply the favicon since the container doesnt have one
        - name: traefik-helper-favicon
          namespace: traefik-helper
