disabled-apps/containerssh/containerssh-guests/containerssh-guests-webserver-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: webserver-proxy
spec:
  routes:
    - match: HostRegexp(`containerssh-[a-z0-9]+\.ieeetamu\.org`)
      kind: Rule
      services:
        - name: webserver-proxy
          port: 80
      middlewares: # apply the favicon since the container doesnt have one
        - name: traefik-helper-favicon
          namespace: traefik-helper
